@@ -4,7 +4,8 @@
 - Feature: [#18732] [Plugin] API to get the guests thoughts.
 - Feature: [#18744] Cheat to allow using a regular path as a queue path.
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
-- Fix: [#18911] Update mini golf fencing to draw correctly from all angles.
+- Fix: [#18467] “Selected only” Object Selection filter is active in Track Designs Manager, and cannot be toggled.
+- Fix: [#18911] Mini Golf station does not draw correctly from all angles.
 
 0.4.3 (2022-12-14)
 ------------------------------------------------------------------------
